# Recipe-Generator

./: pyproject.toml  requirements.txt
src/recipe_generator/: main.py
