[project]
name = "recipe-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "sourabh nateria",email = "sourabhnateria.cse@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "recipe_generator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
